# genjob

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
migrations/: 000001_init.down.sql  000001_init.up.sql
src/genjob/application/: auth_context.py  errors.py  interfaces.py
src/genjob/application/usecases/: __init__.py  add_education.py  add_experience.py  create_profile.py  delete_education.py  delete_experience.py  delete_profile.py  gen_auth_code.py  update_contacts.py  update_education.py  update_experience.py  verify_auth_code.py
src/genjob/cmd/: api.py  configs.py  dishka_providers.py
src/genjob/domain/: __init__.py
src/genjob/domain/entities/: __init__.py  auth_code.py  profile.py  profile_education.py  profile_experience.py  user.py
src/genjob/domain/vo/: profile_contacts.py
src/genjob/infrastructure/: access_token_manager.py  code_generator.py  security_processor.py
src/genjob/infrastructure/db/: __init__.py  transaction_manager.py
src/genjob/infrastructure/db/repositories/: auth_code.py  profile.py  user.py  web_session.py
src/genjob/presentation/api/auth/: __init__.py  auth_context_service.py  web_session.py  web_session_service.py
src/genjob/presentation/api/middlewares/: process_time.py
src/genjob/presentation/api/presenters/: current.py  interfaces.py  profile.py
src/genjob/presentation/api/routers/: __init__.py  auth.py  profile.py
src/genjob/presentation/api/schemas/: auth_code.py  profile.py  token.py  user.py
