[project]
name = "genjob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyseto>=1.9.3",
    "uuid-utils>=0.16.0",
    "uvicorn>=0.49.0",
]

[tool.ruff]
target-version = "py312"
fix = true
unsafe-fixes = true


[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # pylint
    "N", # pep8-naming
    "C4", # flake8-comprehensions
    "RUF", # Ruff-specific
    "TC", # flake8-type-checking
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501", # line too long
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
]
runtime-evaluated-decorators = [
    "dishka.provide",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.patch",
    "fastapi.APIRouter.options",
]

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "."]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.2",
    "prek>=0.4.4",
    "ruff>=0.15.16",
    "ty>=0.0.47",
]
